--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-image: url('./images/background.jpg');">
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
